ver2_ver3
import sys
from __future__ import division
print 7 / 5
print -7 / 5


print (7 / 5)
print (-7 / 5)

''' 
Output in Python 2.x 
1 
-2 
Output in Python 3.x : 
1.4 
-1.4 
'''
# In below python 2.x code, division works
# same as Python 3.x because we use __future__





#print 'Hello, Geeks'	 # Python 3.x doesn't support
print('Hope You like these facts')

''' 
Output in Python 2.x : 
Hello, Geeks 
Hope You like these facts 

Output in Python 3.x : 
File "a.py", line 1 
	print 'Hello, Geeks' 
					^ 
SyntaxError: invalid syntax 

Refer below link for details 
https://www.geeksforgeeks.org/g-fact-25-print-single-multiple-variable-python/ 
'''
print(type('default string '))
print(type(b'string with b '))

''' 
Output in Python 2.x (Bytes is same as str) 
<type 'str'> 
<type 'str'> 

Output in Python 3.x (Bytes and str are different) 
<class 'str'> 
<class 'bytes'> 
'''

print(type('default string '))
print(type(u'string with b '))

''' 
Output in Python 2.x (Unicode and str are different) 
<type 'str'> 
<type 'unicode'> 
'''

# xrange   range
# for x in xrange(1, 5):
#     print(x),
for x in range(1, 5):
	print(x),

''' 
Output in Python 2.x 
1 2 3 4 1 2 3 4 

Output in Python 3.x 
NameError: name 'xrange' is not defined 
'''
